# resume

./: .eleventy.js  .gitignore  Cargo.toml  netlify.toml  package-lock.json  package.json
public/: manifest.webmanifest
src/: index.html  index.json  index.njk  main.rs
src/_includes/: base.njk  macros.html  script.js  sprites.html  style.css
